<resources>
    <string name="app_name">FirebaseApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks">Tasks</string>
    <string name="notes">Notes</string>
    <string name="first_note">First Note</string>
    <string name="textview">textview</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="my_notes">My Notes</string>
    <string name="add">Add</string>
    <string name="enter_note">Enter Note</string>
    <string name="enter_title">Enter Title</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="required">*required</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="title">title</string>
</resources>