<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#272626"
    android:padding="@dimen/_30sdp">

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/edit_shape"
        android:textColorHint="#8F8E8E"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/_15sdp"
        android:textSize="@dimen/_15sdp"
        android:hint="@string/enter_title" />
    <EditText
        android:id="@+id/note_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#8F8E8E"
        android:background="@drawable/edit_shape"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textSize="@dimen/_15sdp"
        android:hint="@string/enter_note"/>
    <TextView
        android:id="@+id/add_button"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_30sdp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_15sdp"
        android:text="@string/add" />
</LinearLayout>